# Roommate-Matcher

./: .gitignore  README.md  fix_tests.py  render.yaml  start.bat  start.sh  update_config.py  update_main.py
backend/: .env.example  README.md  alembic.ini  e2e_test.py  pyproject.toml  test_csv.py  test_out.txt  verify.py  verify_env.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase0_init.py  0001_postgres_baseline_all_tables.py  0002_phase1_contract_indices.py  0003_matching_runs_fairness_snapshot.py  0004_pair_scores_updated_at.py  518fbf2fb0e6_add_is_active_to_rooms.py  59c3bb185e91_add_index_source_form_response_id.py  66d537ba5fdf_enable_rls_alembic_version.py  712aa19360fd_enable_rls.py  8744d05f47e1_add_service_role_rls_policies.py  e26a92a336a6_add_workspace_id_index_to_matching_runs.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: contracts.py  dependencies.py  supabase.py  tokens.py
backend/app/models/: __init__.py  base.py  form_response.py  matching_run.py  pair_score.py  platform_audit_event.py  preference_profile.py  room.py  room_assignment.py  segment.py  student.py  tenant.py  tenant_membership.py  workspace.py  workspace_form_link.py
backend/app/schemas/: checker.py  dashboard.py  fairness.py  form.py  ingestion.py  magic_fill.py  matching.py  segment.py  (+2 more)
backend/scripts/: evaluate.py  fix_remaining_tests.py  fix_tests.py  generate_e2e_admin_token.py  showcase_bootstrap.py
backend/tests/: conftest.py  fixer.py  refactor.py  refactor2.py  refactor3.py  test_health.py  test_verify_env.py
(+281 files in other folders)
